syntax = "proto3";

package create;

service CreateService {
  rpc CreateResource (CreateRequest) returns (CreateResponse) {}
}

// TBD 命名は後で変えるかも
message CreateRequest {
  // int32 id = 1;
  string name = 1;
}

message CreateResponse {
  int32 id = 1;
  string name = 2;
}